--- a/escritos-volumen-1/updated/05-capitulo-4.adoc
+++ b/escritos-volumen-1/updated/05-capitulo-4.adoc
@@ -7,7 +7,7 @@ Ellos tuvieron al verdadero Consolador,
 quien los guió a toda Verdad y los mantuvo vivos en la Verdad,
 y a la Verdad viva en ellos.
 Mediante este Espíritu, ellos como piedras vivas,
-fueron edificados como una casa espiritual, (fundada sobre Sión, el monte santo,
+fueron edificados como una casa espiritual (fundada sobre Sión, el monte santo,
 en Jerusalén, la ciudad santa), la cual es la iglesia del Dios vivo,
 columna y baluarte de la Verdad.
 En esta casa espiritual, la iglesia, tuvieron su ciudadanía en el cielo, con Dios,
@@ -28,12 +28,12 @@ el día del brillo del evangelio.
 ¡Pero he aquí, una noche espesa de tinieblas se extendió sobre la belleza de esto!
 Algunos falsos hermanos salieron de la verdadera iglesia hacia el mundo,
 y con vestidura de ovejas y haciendo una gran aparición
-externa arrastraron al mundo en pos de ellos;
+externa, arrastraron al mundo en pos de ellos;
 sí, incluso a algunos de entre las verdaderas iglesias.
 (¡Cuán obligado se vio el apóstol Pablo a defender ante los corintios
 su propio apostolado y doctrina para poder preservar esa iglesia de los
 falsos apóstoles!) Y cuando reunieron suficientes seguidores en el mundo,
-ganaron terreno contra las verdaderas ovejas y corderos de Cristo,
+y ganaron terreno contra las verdaderas ovejas y corderos de Cristo,
 pelearon contra ellas y las vencieron.
 Y cuando vencieron a las que tenían el testimonio vivo de Jesús
 y el verdadero poder y presencia del Espíritu entre ellas,
@@ -46,7 +46,7 @@ quienes tenían la unción para enseñarles todas las cosas.`"
 Y así dirigieron a los hombres a las tradiciones, a la iglesia (como la llamaban ellos,
 y cuyo nombre ha sido controlado por la ramera desde los días de los apóstoles),
 a escudriñar las Escrituras,
-a la lectura de exposiciones sobre ellas y a obras religiosas constituidas
+a la lectura de exposiciones sobre ellas, y a obras religiosas constituidas
 por la parte intelectual del hombre para instruir la parte intelectual.
 
 En consecuencia, el curso total de la religión y del conocimiento de Dios,
@@ -56,14 +56,14 @@ Ahora el cristianismo consistía en doctrinas de hombres,
 en una forma de adoración y de conocimiento que había construido la sabiduría del hombre,
 y en una imitación de aquello que estaba antes en la vida.
 
-Como resultado de esto, y porque los hombres salieron de la vida,
+Como resultado de esto, y porque los hombres se salieron de la vida,
 del Espíritu y de sus enseñanzas directas,
 y entraron en una forma externa de conocimiento y
 adoración a Dios en la naturaleza equivocada,
 se ha levantado el anticristo y el dragón se ha sentado en el templo,
 apareciendo ahí como si fuera Dios, dando leyes y ordenanzas públicas de adoración,
 demandando deberes privados y ejercicios de devoción. El anticristo
-es obedecido y reverenciado en la observancia de estas cosas,
+es obedecido y reverenciado en el cumplimiento de estas cosas,
 pero Dios, el Dios vivo y verdadero no es conocido, ni conocido Su secreto,
 ni oída la voz que llama al hombre a salir de esas cosas,
 debido al gran ruido que hace el dragón en el templo de Dios (que por ahora es suyo,
@@ -90,21 +90,21 @@ no queda nada salvo el espíritu muerto que se alimenta de la forma muerta.
 ¡Salgan rápido de ese espíritu! ¡Salgan rápido de Babilonia!
 Porque este es el gran error de esta época:
 Que el hombre con el conocimiento adquirido de las palabras de
-las Escrituras sin la verdadera fe y sin la verdadera vida,
+las Escrituras, sin la verdadera fe y sin la verdadera vida,
 trata de evaluar la vida y el conocimiento que provienen de la verdadera fe,
 y como no se alinean con las comprensiones que ha adoptado en su mente, las condena.
 Por tanto,
-al estar el hombre en la sabiduría y observancia terrenal (a la cual la
-verdad nunca le fue revelada y siempre le ha sido ofensiva) tropieza,
+al estar el hombre en la sabiduría y cumplimiento terrenal (a lo que la
+verdad nunca ha sido revelada y siempre le ha sido ofensiva) tropieza,
 tal como sucedió con los fariseos de antaño.
 
 Escuchen por tanto mi exhortación, ustedes que aman sus almas:
 ¡Vengan a la fe y a la iglesia que es recibida, reunida y defendida por Cristo,
 el Cuerno de Salvación! ¡Dejen sus razonamientos y disputas en esa sabiduría
-que ha matado la vida y vengan a la sabiduría que brota de la vida! ¡Ustedes
+que ha matado la vida, y vengan a la sabiduría que brota de la vida! ¡Ustedes
 encontrarán más certeza y satisfacción en un toque de la verdadera vida,
 que en todos los razonamientos y disputas de los
-hombres sabios hasta los confines de la tierra!
+hombres sabios hasta el fin del mundo!
 
 El terreno en el que crece la religión del hombre
 (incluso el más celoso de los hombres) es malo.
@@ -113,8 +113,8 @@ Este terreno ha producido un tipo de fruto, a saber,
 conformación a la letra de las Escrituras,
 el cual está en el entendimiento y en la voluntad del hombre,
 pero lo mantiene lejos de la vida y del crecimiento en ella.
-Pero la verdadera religión se encuentra en la acogida de la Semilla de la vida, la cual,
-mediante Su crecimiento forma una vasija para sí misma,
+Pero la verdadera religión se encuentra en el recibimiento de la Semilla de la vida,
+la cual, mediante Su crecimiento forma una vasija para sí misma,
 y toda la parte anterior (en la que se encontraba el pecado por
 un lado y la justicia propia por el otro) desaparece.
 
@@ -130,8 +130,8 @@ y la contienda acerca de la herencia no será acabada hasta que Dios lo determin
 Caín sacrificó con su fe y creyó que sería aceptado, si no lo hubiera creído así,
 no se habría enojado cuando se encontró con lo contrario.
 El espíritu cainista del hombre, el que lo expulsó de la vida de Dios,
-el que no tiene la eterna vida de Dios morando en él,
-está ocupado con la misma fe hasta el día de hoy y tiene
+y no tiene la eterna vida de Dios morando en él,
+está ocupado con la misma fe hasta el día de hoy, y tiene
 la misma expectativa de ella como la tenía Caín.
 
 Esta fe del hombre es la raíz de la falsa religión, de la falsa esperanza,
@@ -139,22 +139,22 @@ de la falsa paz, del falso gozo, del falso reposo, del falso consuelo,
 de la falsa seguridad, así como la otra es la raíz de lo verdadero.
 En la fe que es del hombre y en el desarrollo de la misma,
 se encuentra todo el conocimiento, el celo,
-la devoción y la adoración del mundo en general y
+la devoción y la adoración del mundo en general, y
 el de la parte mundana en cada hombre en particular.
 Pero el verdadero conocimiento, el verdadero celo,
 la verdadera devoción y la verdadera adoración se encuentran en
 la fe que le da Dios a los que han nacido de la Semilla inmortal,
 los que viven en Dios y en los que Dios vive para siempre.
 
-Ahora, le concierne a todo hombre considerar profundamente,
-de cuál de estos dos tipos de fe procede su conocimiento, religión y adoración,
+Ahora, le concierne a cada hombre considerar profundamente,
+de cuál de estos dos tipos de fe procede su conocimiento, su religión y su adoración,
 y en cuál de ellas se encuentra.
 Porque si todo ello procede y se encuentra en la fe que es del hombre,
 no puede agradar a Dios ni conducir a la salvación del alma.
-Aunque tenga un sabor agradable a su paladar y le
+Aunque tenga un sabor agradable a su paladar, y le
 administre mucha esperanza y satisfacción en el presente,
 fracasará en el tiempo de necesidad.
-Porque como habló Cristo con respecto a la justicia de los escribas y fariseos,
+Porque, tal como habló Cristo con respecto a la justicia de los escribas y fariseos,
 así puedo hacerlo yo con relación a esta fe.
 A menos que la fe de ustedes exceda la fe que se encuentra
 en la naturaleza del hombre (y todas las obras de la misma),
@@ -163,19 +163,19 @@ ni les concederá entrada en la herencia de la vida.
 Porque el que herede la promesa, deberá ser el heredero correcto;
 deberá tener la fe de Abraham, la fe de Isaac,
 la fe que brota de la raíz de vida en la Semilla.
-Esta fe conducirá a la semilla a ese manantial de vida (a partir del cual
-crece como una rama) lo cual es la herencia prometida a la Semilla.
-Aquí está Cristo, Alfa y Omega,
+Esta fe conducirá a la semilla al manantial de vida (a partir del cual
+brotó como una rama) el cual es la herencia prometida a la Semilla.
+Y aquí está Cristo, Alfa y Omega,
 en cada alma particular en la que la vida se ha iniciado y perfeccionado,
 siguiendo su curso a través del tiempo,
 y de regreso a lo que estaba antes del principio.
 
-Por tanto, observe y considere bien qué puede hacer esta fe que es del yo del hombre,
-cuán lejos puede llegar en el cambio del hombre y producir
-una conformación a la letra externa de las Escrituras.
-Luego considere dónde queda afuera, qué _no puede_ hacer, qué cambio no puede realizar,
-a qué no lo puede conformar.
-Para que así la verdadera diferencia pueda ser establecida en su mente y no se
+Por tanto, observen y consideren bien qué puede hacer esta fe que es del yo del hombre,
+cuán lejos puede llegar en el cambio del hombre, y cuánta
+conformación a la letra externa de las Escrituras puede producir.
+Luego consideren dónde queda afuera, qué _no puede_ hacer, qué cambio _no puede_ realizar,
+a qué _no lo puede_ conformar.
+Para que así la verdadera diferencia pueda ser establecida en su mente, y no se
 ponga un fundamento para tan grande error en un asunto de tan grande importancia.
 
 [.numbered-group]
@@ -183,11 +183,11 @@ ponga un fundamento para tan grande error en un asunto de tan grande importancia
 
 [.numbered]
 1+++.+++ Un hombre puede creer la historia de las Escrituras, sí,
-y todas las doctrinas de ellas hasta donde pueda abarcarlas con su entendimiento,
+y puede creer todas las doctrinas de ellas hasta donde pueda abarcarlas con su entendimiento,
 con la fe que es del hombre.
 Al leer el relato de la caída del hombre, de la recuperación por medio de Cristo,
 del camino de la vida, etc.,
-la fe del hombre puede creer el relato de estas cosas
+la fe del hombre puede creer el relato de estas cosas,
 tanto como puede creer el relato de otras cosas.
 
 [.numbered]
@@ -196,7 +196,7 @@ esta fe de manera natural pone todos los poderes
 del hombre a trabajar (enciende el entendimiento,
 la voluntad y las emociones) para evitar la miseria y alcanzar la felicidad.
 ¡Qué no haría el hombre para evitar la miseria perpetua
-del alma y del cuerpo y obtener la corona de bendición eterna!
+del alma y del cuerpo, y obtener la corona de bendición eterna!
 Tales ideas revuelven las emociones y ponen el entendimiento a trabajar al máximo,
 para reunir todas las reglas de las Escrituras y practicar
 todos los deberes y ordenanzas en ellas mencionados.
@@ -207,12 +207,12 @@ todos los deberes y ordenanzas en ellas mencionados.
 Leerá. ¿Debe meditar?
 Meditará. ¿Debe negarse a sí mismo, negar su propia justicia y deberes,
 y sólo esperar la salvación en los méritos de Cristo?
-Parecerá que hace esto también y dirá cuando haya hecho todo lo que puede,
+Parecerá que hace esto también, y dirá cuando haya hecho todo lo que puede,
 que él no es más que un siervo inútil.
 ¿Dicen las Escrituras que él no puede hacer nada sin el Espíritu?
 Él reconocerá esto también y esperará tener el Espíritu.
-Dios ha prometido el Espíritu a todos los que se lo pidan y él lo ha pedido largamente,
-y sigue haciéndolo, y por eso espera tenerlo.
+Dios ha prometido el Espíritu a todos los que se lo pidan, y él lo ha pedido largamente,
+y sigue pidiéndolo, y por eso espera tenerlo.
 Y así,
 mediante una fe natural crece y se extiende como
 un gran árbol y está muy confiado y complacido,
@@ -226,17 +226,17 @@ su voluntad cada vez más conformada a eso que se
 entrega y se inclina con todas sus fuerzas,
 y sus afectos estarán cada vez más destetados;
 él encontrará un tipo de vida y crecimiento en esto (de acuerdo a ese tipo).
-Dejen que el corazón del hombre esté en algún tipo de estudio o de conocimiento,
-aplicándose estrictamente a ello,
-reuniendo entendimiento en su mente y calidez en sus afectos, y sucederá lo mismo.
+Dejen que el corazón del hombre esté en cualquier tipo de estudio o de conocimiento,
+se aplique estrictamente a ello,
+reúna entendimiento en su mente y calidez en sus afectos, y sucederá lo mismo.
 
 [.numbered]
 4+++.+++ Ahora bien,
 ¡cuán fácil es para un hombre equivocarse aquí y decir que eso es la verdad!
 Primero confunde eso con la verdadera fe,
-y luego se equivoca al aplicarle todo lo que le pertenece a la verdadera fe.
-En consecuencia,
-entra en el espíritu de error al principio y se equivoca
+y luego se equivoca al aplicarle a eso todo lo que le pertenece a la verdadera fe.
+Como consecuencia,
+entra en el espíritu de error al principio, y se equivoca
 en el curso de su religión de principio a fin.
 Ve un cambio realizado (mediante esta fe natural) en él y lo considera
 la verdadera conversión y regeneración. Esto lo lleva a pedir,
@@ -245,18 +245,18 @@ la verdadera búsqueda y la verdadera petición. Esto limpia (según este géner
 voluntad y emociones,
 y él lo toma como la verdadera santificación. ¡Ahora
 este hombre se siente a salvo! ¡Él es un creyente,
-es un adorador de Dios, es un cristiano, es un observador de los mandamientos de Cristo.
-Cuando venga el azote abrumador no lo tocará, y los juicios,
+es un adorador de Dios, es un cristiano, es un cumplidor de los mandamientos de Cristo.
+Cuando venga el azote abrumador, no lo tocará, y los juicios,
 plagas y amenazas en las Escrituras no tienen que ver con él, sino con los incrédulos!
 
 No obstante,
 el crecimiento de esta fe y la propagación de la misma en todo su conocimiento,
-celo y devoción no ha cambiado la naturaleza de aquello en todo este tiempo.
+celo y devoción, no han cambiado la naturaleza de eso en todo este tiempo.
 Permanece siendo la misma que era al principio, es decir,
 _sigue siendo el poder de la naturaleza del primer nacimiento._
 Todos estos frutos no son más que los frutos de la primera naturaleza,
 la cual continúa viva por debajo de todo.
-Nada de lo que se encuentra en esta falsa fe puede matar la semilla de la que crece,
+Nada de lo que se encuentra en esta falsa fe puede matar a la semilla de la que crece,
 más bien la alimenta y la engorda para el sacrificio.
 
 ====
@@ -299,7 +299,7 @@ La fe que proviene de Dios será recibida en la tierra y en el reino de la vida.
 La otra será puesta en evidencia como la fe que proviene del nacimiento
 de la esclava y será echada con su madre para que busque pan en otro lugar,
 pues la simiente de la esclava no comparte la herencia de Isaac,
-la semilla de la promesa.
+la Semilla de la promesa.
 
 [.discourse-part]
 Pregunta: ¿Qué es entonces esta fe que es don de Dios?
@@ -311,28 +311,28 @@ Es ese poder de creer que brota de la Semilla de vida eterna y leuda el corazón
 no con conceptos de conocimiento, sino con el poder de la vida.
 En contraste,
 la fe que es del hombre sale de la naturaleza del hombre
-mediante consideraciones que afectan la parte natural,
+mediante consideraciones que influencian la parte natural,
 y es mantenida viva mediante ejercicios naturales como leer, oír, orar, estudiar,
 meditar, etc.
-Pero la fe que proviene de Dios brota de una Semilla de vida dada,
+Pero la fe que proviene de Dios brota de la Semilla de vida dada,
 crece en la vida de dicha Semilla y sólo se alimenta de la carne y de la sangre de Cristo.
 Esta fe, de primera entrada, golpea la parte muerta en donde creció la otra fe,
 y mediante Su crecimiento,
 perfecciona esa muerte y levanta una vida que es de otra naturaleza,
-una que nunca entró en el corazón del hombre para concebir.
+una que nunca había sido concebida por el corazón del hombre.
 Por la muerte de esa parte en nosotros llegamos a
 conocer y a disfrutar la verdadera vida,
 y por la vida que hemos recibido,
 llegamos a ver que lo que los otros hombres llaman vida (la que nosotros
 mismos anteriormente éramos propensos a llamar vida) no es sino muerte.
-De este verdadero conocimiento le damos al mundo
+A partir de este verdadero conocimiento, le damos al mundo
 un verdadero testimonio de lo que hemos visto y sentido;
 pero ningún hombre recibe nuestro testimonio.
 
 Nos duele en el corazón ver que los hombres establecen
 lo que perece como el camino a la vida.
 Con tierno amor les advertimos de la fosa a la que por lo general corren rápidamente,
-aunque nos paguen con odio por nuestra buena voluntad y se conviertan
+aunque nos paguen con odio por nuestra buena voluntad, y se conviertan
 en acérrimos enemigos nuestros porque les decimos la verdad.
 
 Ahora bien, no sean ariscos ni se enojen,
@@ -346,14 +346,14 @@ conozcan la parte en ustedes que se levanta primero, la que está muy ocupada en
 correr y hacer mucho ruido acerca de deberes y ordenanzas,
 la que mantiene abajo la vida que ha asesinado.
 Conozcan también la Semilla de vida, la heredera,
-la que yace por debajo de todo eso y que tiene que
+la que yace por debajo de todo eso, y que tiene que
 permanecer muerta mientras la primera parte vive.
 Sin embargo,
-si alguna vez escuchan la voz del Hijo de Dios esa Semilla vivirá
+si alguna vez escuchan la voz del Hijo de Dios, esa Semilla vivirá
 y la otra morirá. ¡Feliz será para siempre el que conozca esto!
 Pero de miseria será la porción del que no pueda ser testigo de
 una transformación profunda por el omnipotente poder del Dios vivo,
-y solo haya pintado la vieja naturaleza y el sepulcro.
+y sólo haya pintado la vieja naturaleza y el sepulcro.
 Miseria será la herencia de aquellos que nunca conocieron
 la vieja vasija rota y una nueva formada,
 la única que es capaz de recibir y retener el vino nuevo del reino.
@@ -392,7 +392,7 @@ oyera todo lo que pueda ser dicho por los hombres con respecto a Dios, a Cristo,
 la justificación, etc.,
 fuera capaz de disputar acerca de eso y creyera que
 puede probar sus argumentos contra todo el mundo,
-y aún así no ha recibido el verdadero conocimiento de esas cosas,
+y aun así no ha recibido el verdadero conocimiento de esas cosas,
 toda su aparente fe en ellas no puede ser verdadera.
 
 [.alt]
@@ -429,7 +429,7 @@ que hace que la vida sin ello sea imposible de satisfacer.
 De esta manera Cristo excluyó a los judíos con todo su celo y conocimiento.
 "`Pero ustedes no han oído jamás Su voz ni han visto Su apariencia.
 Y Su palabra no la tienen morando en ustedes`" (Juan 5:37-38). Hay un oír la voz verdadero,
-un ver la apariencia verdadero y un tener la palabra de Dios morando
+un ver la apariencia verdadero, y un tener la palabra de Dios morando
 en el corazón verdadero que mantiene al alma viva,
 que la mantiene viviendo en la vida.
 La voz da vida,
@@ -459,7 +459,7 @@ de la lectura, '`porque quiere o porque corre`',
 sino al ser formado en la voluntad de la vida,
 al ser engendrado por la voluntad del Padre, al nacer en esa voluntad,
 al permanecer quieto en esa voluntad y crecer en dicha voluntad.
-Aquí el niño recibe la sabiduría que es de arriba y diariamente
+Aquí el niño recibe la sabiduría que es de arriba, y diariamente
 aprende la cruz que crucifica la otra sabiduría y la otra voluntad,
 a las cuales les encanta alimentarse en la parte
 sombría y robusta del conocimiento sin la vida.
@@ -491,7 +491,7 @@ no es llamado a producir esa fe con la que cree otras cosas,
 sino a recibir y a ejercitar el don de fe, el cual es de arriba.
 Eso que debe ser creído es espiritual y debe ser espiritual lo que cree en ello.
 El hombre con todos los poderes de su naturaleza está excluido.
-Déjelo creer, leer, orar, oír y ejercitarse en eso que llama deberes y ordenanzas,
+Déjenlo creer, leer, orar, oír y ejercitarse en eso que llama deberes y ordenanzas,
 y todo se afirmará en la parte equivocada del hombre,
 sólo alimentará la parte equivocada,
 y dicha parte con toda su comida y nutrición quedará corta de la vida.
@@ -512,17 +512,17 @@ la letra y no de la novedad del Espíritu) es recibido Cristo.
 Porque Cristo sólo puede ser recibido por la fe que viene de Él,
 y esa fe que viene de Él no puede hacer otra cosa más que recibirlo.
 
-La fe del hombre rechaza a Cristo, aunque reciba un conocimiento literal de Él,
+La fe del hombre rechaza a Cristo, aunque reciba un conocimiento literal de Él
 de lo que oye de los hombres o lee en las Escrituras
 con respecto a Él. No puede ser de otra manera,
 pues la fe del hombre al no ser de la naturaleza de Él, no puede sino rechazarlo.
 Pero la fe que es dada por Dios, que es de arriba,
 al ser de la misma vida y naturaleza de Cristo,
 no puede rechazar el origen de su propia vida, y lo recibe inmediatamente.
-No hay distancia de tiempo; tan pronto es recibida la fe,
+No hay lapso de tiempo; tan pronto es recibida la fe,
 es recibido Cristo y el alma es unida a Él en la fe.
 Así como la incredulidad lo rechaza inmediatamente,
-la fe lo deja entrar inmediatamente y centra el alma en Él,
+la fe lo deja entrar inmediatamente y centra el alma en Él;
 el alma inmortal siente la virtud inmortal y se regocija
 en la fuente verdadera de su propia naturaleza inmortal.
 
@@ -714,11 +714,11 @@ de la fuente de vida es la regla de vida.
 Sin embargo,
 los cristianos en la degeneración han perdido esto y han tomado
 palabras como regla (las cuales no fueron dadas con ese propósito).
-Y así con deducciones de la mente terrenal alimentan la parte terrenal.
+Y así, con deducciones de la mente terrenal alimentan la parte terrenal.
 ¿Qué puede ser alimentado por el conocimiento de los hombres
 sobre las Escrituras sino el entendimiento terrenal?
 ¿No es la voluntad terrenal estimulada y los afectos terrenales enardecidos?
-Cuando tales frutos son ofrecidos a Dios y rechazados (como con Caín),
+Cuando tales frutos son ofrecidos a Dios y rechazados (como sucedió con Caín),
 el hombre terrenal se enoja al ver que Dios ha resucitado a Abel, al hermano menor,
 quien ofrece el Cordero de Dios y le sirve al Dios vivo en su propio Espíritu
 vivo y con la fe que viene de Él. La religión de Abel no se encuentra
@@ -759,12 +759,12 @@ es tanto añadidor como quitador?
 El tal quita el sentido verdadero y le añade sentido que no es verdadero.
 El Espíritu del Señor es el verdadero intérprete de las Escrituras, nunca añade ni quita,
 pero el hombre sin ese Espíritu sólo puede adivinar, imaginar,
-estudiar e inventar un significado y por eso siempre está añadiendo o quitando.
+estudiar e inventar un significado, y por eso siempre está añadiendo o quitando.
 "`Este es el significado,`" dice uno.
 "`Este es el significado,`" dice otro.
 "`No, este es el significado,`" dice un tercero o un cuarto.
 Otro, tal vez más ingenioso y educado declara que todos son correctos,
-y otro más ingenioso aún,
+y otro aún más ingenioso,
 dice que ninguno es correcto e inventa un significado diferente de todos los
 demás. ¿No es esto clara muestra de que el que habla de esta manera carece del
 Espíritu del Señor para abrir las Escrituras y manifestar el verdadero significado?
@@ -849,12 +849,12 @@ Más bien conozcan el verdadero almacén de las cosas de la vida,
 que está en la vida misma, y en ese entendimiento que es formado, permanezcan y vivan.
 No reserven maná para alimentarse de él en el viejo almacén,
 (no sea que la parte carnal corra allí cuando el apetito carnal se despierte tras comida),
-antes bien reciban todos los días el pan de la mano de la vida.
+antes bien reciban todos los días el '`pan continuo`' de la mano de la vida.
 
 [.numbered]
 4+++.+++ Hay un conocimiento de las cosas por el Espíritu
 que revela las palabras que hablan de ellas,
-o por profecías interiores y directas que provienen de la Palabra de vida en el corazón.
+o por profecías internas y directas que provienen de la Palabra de vida en el corazón.
 Este es un conocimiento excelente y no es encontrado en la parte terrenal del hombre.
 Como es un conocimiento muy precioso y mucho más pleno y cierto que el otro,
 y tiene la naturaleza y el poder directo de la vida en sí mismo,
@@ -872,10 +872,10 @@ que pueda tenerse de las palabras referentes a la cosa.
 5+++.+++ Cuando sientan esas cosas,
 busquen la preservación de las mismas en la fuente de vida de ellas.
 Dejen que la raíz los sostenga y sostenga todo el conocimiento que tienen,
-junto con todo lo que les es concedido de Dios libremente.
+junto con todo lo que les es gratuitamente concedido de Dios.
 Cuando se sientan leudados por la vida y se conviertan en una rama que crece de la vida,
-aprenderán a permanecer en la vida y a mantener todo lo que les
-es dado ahí. No tengan nada que puedan llamar propio nunca más;
+aprendan a permanecer en la vida y a mantener todo lo que les
+es dado ahí. Nunca más tengan algo que puedan llamar propio;
 perezcan para sí mimos y sean hallados en Él. Conozcan la tierra de los vivos,
 en la que todas las cosas de la vida viven y no pueden vivir en ningún otro lugar.
 
@@ -930,7 +930,7 @@ Una de ellas es ordenanza de Cristo, la otra es ordenanza del anticristo.
 Ahora, la pregunta es: ¿Cuál de estas es la oración de ustedes?
 ¿Salen sus oraciones de su propio aliento o del aliento de Dios?
 ¿Salen ellas de la renovación del Espíritu de vida, o de la parte natural pintada?
-En consecuencia, es la oración de ustedes el medio verdadero o el medio falso.
+Porque, en consecuencia, la oración de ustedes es el medio verdadero o el medio falso.
 Si es el verdadero, poseerán el Espíritu, la vida, el reino; si es el medio falso,
 nunca obtendrán eso.
 
@@ -951,14 +951,14 @@ son el medio falso.
 ¿Cómo aprendieron a orar?
 ¿Fueron enseñados de lo alto,
 o ganaron la destreza y la habilidad por medio del
-ejercicio y mejora de sus propias partes naturales?
+ejercicio y mejora de la partes naturale en ustedes?
 ¿Comenzaron con suspiros y gemidos,
 permaneciendo allí hasta que el mismo Espíritu que
 los enseñó a gemir les enseñara también a hablar?
 ¿Han sido alguna vez capaces de distinguir los suspiros
-y gemidos de engendramiento del Espíritu,
-de los suspiros y gemidos de sus partes naturales y emotivas?
-¿Han sido empujadas a un lado esas partes naturales, con todos sus suspiros, gemidos,
+y gemidos que engendra el Espíritu,
+de los suspiros y gemidos de la parte naturale y emotiva en ustedes?
+¿Han sido empujada a un lado esa parte naturale, con todos sus suspiros, gemidos,
 deseos y esfuerzos?
 ¿Ha sido levantada la Semilla inmortal por el Espíritu de vida eterna,
 la cual enseña a llorar y afligirse, y finalmente a hablar,
@@ -969,7 +969,7 @@ esa oración no es otra cosa más que el medio falso,
 con la calidez falsa que sale del fuego falso.
 Este no es más que el medio que el espíritu de la ramera
 (el que no está en unión con la vida ni con el poder,
-sino que mantiene a la semilla en esclavitud) ha puesto en lugar del verdadero.
+sino que mantiene a la Semilla en esclavitud) ha puesto en lugar del verdadero.
 Este no puede llevar a la verdad,
 pero sí mantener vivo al enemigo de Dios bajo una cubierta agradable.
 Tampoco es la adoración al Dios vivo, ya que es de otro espíritu y para otro espíritu.
