--- a/escritos-volumen-1/updated/11-capitulo-10.adoc
+++ b/escritos-volumen-1/updated/11-capitulo-10.adoc
@@ -1,4 +1,4 @@
-[#ch10, short="La Oración, el Ministerio, la Sabiduría Y el Reino"]
+[short="La Oración, el Ministerio, la Sabiduría Y el Reino"]
 == Capítulo X. La Oración, el Ministerio, la Sabiduría Y el Reino que son Espirituales
 
 === La Oración en el Espíritu
